@@ -2,7 +2,12 @@ Change log for Defense Condition game project
 
 Author(s): Ray Gardener (support@daylongraphics.com)
 Repository: https://github.com/RayOfDaylon/Defcon
-September 29, 2023
+October 10, 2023
+
+
+Mouse pointer hidden when game starts (can be enabled for debugging in Main map's BeginPlay script).
+
+Pressing Esc at any time in the intro screen exits the game app.
 
 
 Made shield powerup texture animate better.
